fix: filter locking tooltips getting cut off at boundary in excel app

--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -18,16 +18,20 @@
 
   /* These are not inline styles since they do not apply to saved PNG charts */
   .bar,
+  .column,
+  .circle,
+  .line,
+  .slice,
+  .stacked-area,
   .stacked-bar,
   .stacked-column,
-  .circle,
-  .stacked-area {
+  .swatch {
     transition: fill-opacity 0.3s ease;
-    fill-opacity: 0.7 !important;
+    fill-opacity: 1 !important;
     outline: none !important;
     &:hover,
     &.active {
-      fill-opacity: 1 !important;
+      fill-opacity: 0.7 !important;
     }
   }
   .line-dot,
